# mcp-foundry

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
config/: config.yaml
connectors/: __init__.py  bybit.py
core/: __init__.py  exceptions.py  interface.py  mcp_server.py  risk_management.py  trading_engine.py
docs/: architecture.md  connector_development_guide.md  quickstart.md  uti_specification.md
enterprise/: README.md  __init__.py
enterprise/algos/: __init__.py
enterprise/connectors/: __init__.py
examples/: ai_agent_integration.py  basic_market_order.py  run_mcp_server.py
gateway/: README.md  __init__.py
scripts/: run_server.py
tests/: __init__.py  conftest.py  test_connectors.py  test_interface.py  test_mcp_server.py  test_risk_management.py  test_trading_engine.py
utils/: __init__.py  config_loader.py  logging_config.py
